--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
-	<title>Document</title>
+	<title>Weather Station</title>
 </head>
 <body>
 	<!-- Creating the navigation bar -->
@@ -167,8 +167,8 @@
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"> </script>
-	<script src="./backend/statistics.js"> </script>
-	<script src="./backend/script.js"> </script>
+	<script src="backend/statistics.js"> </script>
+	<script src="backend/script.js"> </script>
 
 </body>
 </html>
